ansible changes to make development branch focal compatible
Signed-off-by: Mengyang Zhang <mzhang741@bloomberg.net>

--- a/ansible/playbooks/roles/common/tasks/configure-chrony.yml
+++ b/ansible/playbooks/roles/common/tasks/configure-chrony.yml
@@ -21,6 +21,7 @@
     path: /etc/systemd/system/chrony.service.d
     recurse: yes
     state: directory
+  when: ansible_distribution_version == "18.04"
 
 - name: install service to start monitoring sources after getting a default route
   block:
