support both bionic and focal in chef automations
Signed-off-by: Jing Geng <jgeng25@bloomberg.net>

--- a/ansible/playbooks/configure-common-node.yml
+++ b/ansible/playbooks/configure-common-node.yml
@@ -11,7 +11,7 @@
 # In the future, we should move Consul, etcd, etc. out of Chef and into
 # Ansible so these dependencies can be resolved more elegantly.
 - hosts: "{{ groups.get('etcdnodes', groups.get('headnodes', [])) }}"
-  gather_facts: no
+  gather_facts: yes
   become: yes
   tasks:
     - name: provision the first etcd server
@@ -21,7 +21,7 @@
       changed_when: false
 
 - hosts: cloud
-  gather_facts: no
+  gather_facts: yes
   become: yes
   tasks:
     - name: run chef-client with role[node]'s run_list
