--- a/ansible/playbooks/etcdnodes.yml
+++ b/ansible/playbooks/etcdnodes.yml
@@ -1,5 +1,5 @@
 - hosts: etcdnodes
-  gather_facts: no
+  gather_facts: yes
   serial: "{{ step | default(ansible_play_batch | length) }}"
   roles:
     - common
