--- a/ansible/playbooks/roles/common/defaults/main/chef.yml
+++ b/ansible/playbooks/roles/common/defaults/main/chef.yml
@@ -110,7 +110,7 @@ chef_roles:
     json_class: Chef::Role
     chef_type: role
     run_list:
-      - recipe[bcpc::chef]
+      - recipe[bcpc::ohai]
       - recipe[bcpc::default]
       - recipe[bcpc::ssl]
       - recipe[bcpc::cloud-archive]
