--- a/ansible/playbooks/headnodes.yml
+++ b/ansible/playbooks/headnodes.yml
@@ -2,6 +2,7 @@
   gather_facts: no
   serial: "{{ step | default(ansible_play_batch | length) }}"
   roles:
-    - common
     - chef-node
+    - common
+    - consul
     - headnode
