--- a/ansible/playbooks/roles/common/defaults/main/base.yml
+++ b/ansible/playbooks/roles/common/defaults/main/base.yml
@@ -226,6 +226,8 @@ networking:
 use_primary_transit_interface: true
 configure_service_ip: true
 configure_network_interfaces: true
+ 
+networking_networks_primary_aggregate_cidr: []
 
 ###############################################################################
 # ubuntu apt sources.list
