Moving haproxy recipe to ansible role.
Signed-off-by: npustchi <npustchi@bloomberg.net>

--- a/ansible/playbooks/headnodes.yml
+++ b/ansible/playbooks/headnodes.yml
@@ -4,4 +4,13 @@
   roles:
     - common
     - chef-node
+    - cinder
+    - glance
+    - haproxy
     - headnode
+    - heat
+    - keystone
+    - neutron
+    - nova
+    - placement
+    - watcher
