--- a/ansible/playbooks/roles/common/tasks/configure-chrony.yml
+++ b/ansible/playbooks/roles/common/tasks/configure-chrony.yml
@@ -21,7 +21,7 @@
     path: /etc/systemd/system/chrony.service.d
     recurse: yes
     state: directory
-  when: ansible_distribution_version == "18.04"
+#  when: ansible_distribution_version == "18.04"
 
 - name: install systemd dependency work-around for chrony
   copy:
@@ -33,14 +33,14 @@
     dest: /etc/systemd/system/chrony.service.d/custom.conf
     mode: 0644
   register: chrony_custom
-  when: ansible_distribution_version == "18.04"
+#  when: ansible_distribution_version == "18.04"
 
 - name: reload chrony
   systemd:
     name: chrony
     daemon_reload: yes
     enabled: yes
-  when: ansible_distribution_version == "18.04" and chrony_custom.changed  # noqa no-handler
+  when: chrony_custom.changed  # noqa no-handler ansible_distribution_version == "18.04" and
 
 - name: restart chrony
   systemd:
