--- a/ansible/playbooks/roles/haproxy/defaults/main.yml
+++ b/ansible/playbooks/roles/haproxy/defaults/main.yml
@@ -91,3 +91,5 @@ haproxy_qos_slo_url: null
 
 # The value of the Retry-After header specified in 429 responses
 haproxy_qos_retry_after: 5
+
+html_response: "<html><body><h1>429 Too Many Requests</h1>\nYou have executed too many requests and have been rate limited. Please see the service SLO{{ ' at ' + haproxy_qos_slo_url if haproxy_qos_slo_url is not none }} for more information.\n</body></html>\n\n"
