--- a/virtual/files/ansible/vars/virtual.yml
+++ b/virtual/files/ansible/vars/virtual.yml
@@ -2,7 +2,7 @@
 # virtual environment settings
 ###############################################################################
 
-root_dir: "{{ inventory_dir | dirname }}"
+root_dir: "{{ inventory_dir | dirname | dirname }}"
 virtual_dir: "{{ root_dir }}/virtual"
 virtual_ssh_dir: "{{ virtual_dir }}/files/ssh"
 ansible_ssh_private_key_file: "{{ virtual_ssh_dir }}/id_ed25519"
