--- a/ansible/playbooks/roles/common/defaults/main/base.yml
+++ b/ansible/playbooks/roles/common/defaults/main/base.yml
@@ -68,6 +68,7 @@ cloud_vars: "{{ {} | combine(
 cloud_images:
   - file_asset: cirros
     type: qcow2
+    license_name: unlicensed
 
 all_cloud_images: "{{ cloud_images + additional_cloud_images | default([]) }}"
 
@@ -285,7 +286,7 @@ bird:
 
 license_trait_keyword: CUSTOM_LICENSE_
 
-licenses:
+license_traits:
   enabled: false
   traits:
     - name: unlicensed
